--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,                // ✅ better to keep strict
     "noEmit": true,
     "incremental": true,
     "module": "esnext",
@@ -13,8 +13,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": ".",   // 👈 add this
-    "paths": {        // 👈 add this
+    "baseUrl": ".",                // ✅ alias base
+    "paths": {                     // ✅ alias paths
       "@/*": ["./*"]
     },
     "plugins": [
@@ -25,9 +25,8 @@
   },
   "include": [
     "next-env.d.ts",
-    ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", ".next"]
 }
