--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cookie": "^1.0.2",
     "framer-motion": "^12.23.12",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "react": "19.1.0",
@@ -20,6 +23,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "24.3.0",
     "@types/react": "19.1.12",
     "eslint": "^9",
