--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,45 @@
+// {
+//   "compilerOptions": {
+//     "target": "ES2017",
+//     "lib": [
+//       "dom",
+//       "dom.iterable",
+//       "esnext"
+//     ],
+//     "allowJs": true,
+//     "skipLibCheck": true,
+//     "strict": true, // ✅ better to keep strict
+//     "noEmit": true,
+//     "incremental": true,
+//     "module": "esnext",
+//     "esModuleInterop": true,
+//     "moduleResolution": "node",
+//     "resolveJsonModule": true,
+//     "isolatedModules": true,
+//     "jsx": "preserve",
+//     "baseUrl": ".", // ✅ alias base
+//     "paths": { // ✅ alias paths
+//       "@/*": [
+//         "./*"
+//       ]
+//     },
+//     "plugins": [
+//       {
+//         "name": "next"
+//       }
+//     ]
+//   },
+//   "include": [
+//     "**/*.ts",
+//     "**/*.tsx",
+//     "next-env.d.ts",
+//     ".next/types/**/*.ts"
+//   ],
+//   "exclude": [
+//     "node_modules",
+//     ".next"
+//   ]
+// }
 {
   "compilerOptions": {
     "target": "ES2017",
@@ -8,21 +50,25 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true, // ✅ better to keep strict
+    "strict": true,
     "noEmit": true,
     "incremental": true,
     "module": "esnext",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": ".", // ✅ alias base
-    "paths": { // ✅ alias paths
+    "baseUrl": ".",
+    "paths": {
       "@/*": [
         "./*"
       ]
     },
+    "types": [
+      "node"
+    ],
     "plugins": [
       {
         "name": "next"
